# OpenTOPAS

./: .clang-format  CMakeHandleExtensions.cmake  CMakeLists.txt  INSTALL.txt  InstallingNotes.txt  OpenTOPAS_quickStart_Debian.md  OpenTOPAS_quickStart_MacOS.md  OpenTOPAS_quickStart_WSL.md  OpenTOPAS_quickStart_forMacOS.md  Packaging.txt  README.md  TOPAS_quickStart_forMacOS.md  TsTopasConfig.hh.in  rundemos.csh  topas.cc
chemistry/: CMakeLists.txt  TsChemSteppingAction.cc  TsChemSteppingAction.hh  TsChemTimeStepAction.cc  TsChemTimeStepAction.hh  TsChemTrackingAction.cc  TsChemTrackingAction.hh  TsChemTrackingManager.cc  TsChemTrackingManager.hh  TsChemistryManager.cc  TsChemistryManager.hh
docker/: Dockerfile.topas  FAQ.Docker.md  README.Docker.md  topas-apptainer  topas-docker  topas-host-open
extensions/: CMakeLists.txt.in  TsExtensionManager.cc.in  TsExtensionManager.hh.in
filtering/: CMakeLists.txt  TsFilterByAtomicMass.cc  TsFilterByAtomicMass.hh  TsFilterByAtomicNumber.cc  TsFilterByAtomicNumber.hh  TsFilterByCharge.cc  TsFilterByCharge.hh  TsFilterByCreatorProcess.cc  TsFilterByCreatorProcess.hh  TsFilterByGeneration.cc  TsFilterByGeneration.hh  TsFilterByIncidentParticleCreatorProcess.cc  TsFilterByIncidentParticleCreatorProcess.hh  TsFilterByIncidentParticleGeneration.cc  TsFilterByIncidentParticleGeneration.hh  TsFilterByIncidentParticleKE.cc  TsFilterByIncidentParticleKE.hh  TsFilterByIncidentParticleMomentum.cc  TsFilterByIncidentParticleMomentum.hh  TsFilterByIncidentParticleType.cc  TsFilterByIncidentParticleType.hh  TsFilterByInitialKE.cc  TsFilterByInitialKE.hh  TsFilterByInitialMomentum.cc  TsFilterByInitialMomentum.hh  TsFilterByInteractedOrTraversed.cc  TsFilterByInteractedOrTraversed.hh  TsFilterByInteractionCount.cc  TsFilterByInteractionCount.hh  TsFilterByInverse.cc  TsFilterByInverse.hh  TsFilterByKE.cc  TsFilterByKE.hh  TsFilterByMaterial.cc  TsFilterByMaterial.hh  TsFilterByMomentum.cc  TsFilterByMomentum.hh  TsFilterByOrigin.cc  TsFilterByOrigin.hh  TsFilterByPrimaryKE.cc  (+17 more)
forenduser/: CMakeLists.txt  LICENSE.txt  README.txt.in  rundemos.csh
geometry/: CMakeLists.txt  TsAperture.cc  TsAperture.hh  TsApertureArray.cc  TsApertureArray.hh  TsBorderSurface.cc  TsBorderSurface.hh  TsBox.cc  TsBox.hh  TsBrachyApplicator.cc  TsBrachyApplicator.hh  TsBrachyShieldStar.cc  TsBrachyShieldStar.hh  TsBrachyShieldWedge.cc  TsBrachyShieldWedge.hh  TsCADComponent.cc  TsCADComponent.hh  TsCompensator.cc  TsCompensator.hh  TsCylinder.cc  TsCylinder.hh  TsDicomActivityMap.cc  TsDicomActivityMap.hh  TsDicomPatient.cc  TsDicomPatient.hh  TsDivergingMLC.cc  TsDivergingMLC.hh  TsElectricFieldMap.cc  TsElectricFieldMap.hh  TsElectroMagneticFieldMap.cc  TsElectroMagneticFieldMap.hh  TsElectroMagneticFieldUniform.cc  TsElectroMagneticFieldUniform.hh  TsEye.cc  TsEye.hh  TsEyePlaque.cc  TsEyePlaque.hh  TsGenericComponent.cc  TsGenericComponent.hh  TsGeometryHub.cc  (+49 more)
graphics/: CMakeLists.txt  TsGraphicsManager.cc  TsGraphicsManager.hh  TsGraphicsView.cc  TsGraphicsView.hh
io/: CMakeLists.txt  TsFileHub.cc  TsFileHub.hh  TsNtupleAscii.cc  TsNtupleAscii.hh  TsNtupleBinary.cc  TsNtupleBinary.hh  TsNtupleRoot.cc  TsNtupleRoot.hh  TsVFile.cc  TsVFile.hh  TsVNtuple.cc  TsVNtuple.hh
main/: CMakeLists.txt  TsMain.cc  TsMain.hh
material/: CMakeLists.txt  TsMaterialManager.cc  TsMaterialManager.hh
outcome/: CMakeLists.txt  TsCriticalElementModel.cc  TsCriticalElementModel.hh  TsCriticalVolumeModel.cc  TsCriticalVolumeModel.hh  TsLKBModel.cc  TsLKBModel.hh  TsNiemerkoModel.cc  TsNiemerkoModel.hh  TsOutcomeModelList.cc  TsOutcomeModelList.hh  TsParallelSerialModel.cc  TsParallelSerialModel.hh  TsPoissonModel.cc  TsPoissonModel.hh  TsStavrevModel.cc  TsStavrevModel.hh  TsVOutcomeModel.cc  TsVOutcomeModel.hh  TsZaiderMinerbo.cc  TsZaiderMinerbo.hh
parameter/: CMakeLists.txt  TsBooleanFromBoolean.cc  TsBooleanFromBoolean.hh  TsBooleanFromBooleanTimesBoolean.cc  TsBooleanFromBooleanTimesBoolean.hh  TsBooleanFromTimeFeatureStep.cc  TsBooleanFromTimeFeatureStep.hh  TsBooleanFromValue.cc  TsBooleanFromValue.hh  TsBooleanVectorFromBooleanVector.cc  TsBooleanVectorFromBooleanVector.hh  TsBooleanVectorFromValue.cc  TsBooleanVectorFromValue.hh  TsDefaultParameters.cc  TsDefaultParameters.hh  TsDoubleFromDouble.cc  TsDoubleFromDouble.hh  TsDoubleFromDoubleMinusDouble.cc  TsDoubleFromDoubleMinusDouble.hh  TsDoubleFromDoubleMinusValue.cc  TsDoubleFromDoubleMinusValue.hh  TsDoubleFromDoublePlusDouble.cc  TsDoubleFromDoublePlusDouble.hh  TsDoubleFromDoublePlusValue.cc  TsDoubleFromDoublePlusValue.hh  TsDoubleFromDoubleTimesInteger.cc  TsDoubleFromDoubleTimesInteger.hh  TsDoubleFromDoubleTimesUnitless.cc  TsDoubleFromDoubleTimesUnitless.hh  TsDoubleFromDoubleTimesValue.cc  TsDoubleFromDoubleTimesValue.hh  TsDoubleFromIntegerTimesValue.cc  TsDoubleFromIntegerTimesValue.hh  TsDoubleFromTimeFeature.cc  TsDoubleFromTimeFeature.hh  TsDoubleFromTimeFeatureStep.cc  TsDoubleFromTimeFeatureStep.hh  TsDoubleFromUnitlessTimesValue.cc  TsDoubleFromUnitlessTimesValue.hh  TsDoubleFromValue.cc  (+238 more)
patches/: geant4_10_03_p01.patch  geant4_10_04_p02.patch  geant4_10_05.patch  geant4_10_05_p01.patch  geant4_10_06_p01.patch  geant4_10_06_p02.patch  geant4_10_06_p03.patch  geant4_10_07_p01.patch  geant4_10_07_p02.patch  geant4_10_07_p03.patch
physics/: CMakeLists.txt  TsModularPhysicsList.cc  TsModularPhysicsList.hh  TsModularPhysicsList.icc  TsPhotoNeutron.cc  TsPhotoNeutron.hh  TsPhysicsManager.cc  TsPhysicsManager.hh
primary/: CMakeLists.txt  TsGeneratorActivityMap.cc  TsGeneratorActivityMap.hh  TsGeneratorBeam.cc  TsGeneratorBeam.hh  TsGeneratorDistributed.cc  TsGeneratorDistributed.hh  TsGeneratorEmittance.cc  (+30 more)
sequence/: CMakeLists.txt  TsActionInitialization.cc  TsActionInitialization.hh  TsEventAction.cc  TsEventAction.hh  TsQt.cc  TsQt.hh  TsQt5.cc  TsQt5.hh  TsQt6.cc  TsQt6.hh  TsSequenceManager.cc  TsSequenceManager.hh  TsStackingAction.cc  TsStackingAction.hh  TsSteppingAction.cc  TsSteppingAction.hh  TsTrackInformation.cc  TsTrackInformation.hh  TsTrackingAction.cc  TsTrackingAction.hh
(+536 files in other folders)
